index.css
/* -------------------------------------------------------------------------- */
/* 1. Global Configs */

:root {
  --text-color: #abb2bf;
  --background-color: #282a36;
  --link-color: #95c379;
  --local-link-color: #cc7847;
  --max-content-width-mobile: 90vw;
  --max-content-width-desktop: 580px;
  --margin: 1rem;
}

body {
  background-color: var(--background-color);
  color: var(--text-color);
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif,
    BlinkMacSystemFont, "Segoe UI";
  max-width: var(--max-content-width-mobile);
  padding-bottom: 30px;
  padding-left: var(--margin);
  padding-right: var(--margin);
}

/* -------------------------------------------------------------------------- */
/* 2. Text Configs */

h1 {
  font-size: 1.85rem;
}

blockquote {
  margin-block-start: 10px;
  margin-block-end: 10px;
  border-left: 3px solid var(--text-color);
  padding-left: 10px;
}

.home-quote {
  margin-left: 22px;
}

.indented-paragraph {
  margin-left: 2rem;
}

.quote-author {
  text-align: right;
  padding-left: 30vw;
}

li {
  margin-bottom: 0.5rem;
}

a {
  color: var(--link-color);
  text-decoration: none;
}

code {
  color: #c26f79;
}

pre {
  margin-left: 30px;
}

kbd {
  color: rgb(189, 183, 174);
  border-color: rgb(101, 93, 83);
  background-color: rgb(10, 14, 18);
  box-shadow: rgb(90, 97, 101) 0px -1px 0px inset;
  border-radius: 6px;
  font: 0.85rem monospace;
  padding: 3px 5px;
  vertical-align: middle;
}

/* -------------------------------------------------------------------------- */
/* 3. Media */

iframe {
  max-width: var(--max-content-width-mobile);
  max-height: 51vw;
  width: 560px;
  height: 315px;
  padding-right: var(--margin);
}

figure {
  display: table;
  margin-bottom: 20px;
  margin-top: 20px;
  margin-left: 0px;
}

img {
  max-width: var(--max-content-width-mobile);
}

figcaption {
  font-size: 0.85em;
  display: table-caption;
  caption-side: bottom;
}

.design-fragments {
  max-width: 300px;
}

#home-top {
  display: flex;
  padding-right: 32px;
}

#right {
  vertical-align: middle;
}

svg,
image {
  height: 27.5px;
  width: 27.5px;
}

svg {
  margin-bottom: 10px;
}

#badges {
  margin-left: 22px;
}

div.SGF {
  height: 500px;
  width: 100%;
}

/* -------------------------------------------------------------------------- */
/* 4. Tables */

table {
  padding-right: 24px;
  border-spacing: 0;
  border-collapse: separate;
  border: 1px #090705;
}

table > caption {
  text-align: left;
  margin-bottom: 10px;
  margin-left: 17px;
  font-size: 1.5rem;
  font-weight: bold;
}

td,
th {
  border: solid 0.25px #1b1c1f;
}

td,
th {
  padding-top: 7.5px;
  padding-left: 7.5px;
  padding-right: 7.5px;
  padding-bottom: 7.5px;
}

tr:nth-child(odd),
th {
  background-color: #222222;
}

tr:nth-child(even),
th {
  background-color: #090705;
}

/* -------------------------------------------------------------------------- */
/* 5. Table of Contents */

table-of-contents ol {
  counter-reset: item;
  margin-top: 8px;
  margin-left: 20px;
  margin-bottom: 8px;
  padding: 0;
}

table-of-contents li {
  display: table;
  margin: 0;
}

table-of-contents li:before {
  color: var(--local-link-color);
  content: counters(item, ".") ". ";
  counter-increment: item;
  display: table-cell;
  padding-right: 0.6em;
}

table-of-contents h2 {
  margin-top: 8px;
  margin-bottom: 0;
}

a#articles,
a#pages {
  cursor: pointer;
  color: var(--local-link-color);
}

/* -------------------------------------------------------------------------- */
/* 6. Foot-note */

foot-note a,
sup {
  color: #d9c07b;
  text-decoration: none;
}

foot-note p {
  padding: 15px;
}

/* -------------------------------------------------------------------------- */
/* 7. Article Footer */

article-footer hr {
  margin-left: 0px;
  border: none;
  max-width: 150px;
  width: 35vw;
  height: 0.75px;
  color: var(--text-color);
  background-color: var(--text-color);
}

article-footer a {
  color: #95c379;
  text-decoration: none;
}

/* -------------------------------------------------------------------------- */
/* 8. Fanaro Nav */

fanaro-nav a {
  display: inline-flex;
  align-items: center;
  font-size: 1.5rem;
  color: var(--text-color);
  text-decoration: none;
}

fanaro-nav img {
  padding-right: 10px;
}

/* -------------------------------------------------------------------------- */
/* 9. Local Link */

local-link a {
  color: var(--local-link-color);
  text-decoration: none;
}

/* -------------------------------------------------------------------------- */
/* 10. Other Widths */

@media (min-width: 600px) {
  body {
    max-width: var(--max-content-width-desktop);
    width: var(--max-content-width-desktop);
  }

  .quote-author {
    padding-left: 200px;
  }

  img,
  iframe {
    max-width: var(--max-content-width-desktop);
  }
}

/* -------------------------------------------------------------------------- */

